kubernetes/service_mesh/istio/envoyfilters/gzip-stats.yaml
# 加密 istio stats 的指标接口，省点 AWS 跨区流量
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gzip-stats
  namespace: istio-system
spec:
  configPatches:
    - applyTo: LISTENER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          address:
            socket_address:
              protocol: TCP
              address: 0.0.0.0
              port_value: 14090
          filterChains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typedConfig:
                    "@type": >-
                      type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    httpFilters:
                      - name: envoy.filters.http.compressor
                        typed_config:
                          "@type": >-
                            type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                          compressor_library:
                            name: text_optimized
                            typed_config:
                              "@type": >-
                                type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          remove_accept_encoding_header: true
                      - name: envoy.filters.http.router
                        typedConfig:
                          "@type": >-
                            type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    routeConfig:
                      virtualHosts:
                        - domains:
                            - "*"
                          name: backend
                          routes:
                            - match:
                                prefix: /stats/prometheus
                              route:
                                cluster: prometheus_stats
                    statPrefix: stats
    - applyTo: LISTENER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          address:
            socket_address:
              protocol: TCP
              address: 0.0.0.0
              port_value: 14090
          filterChains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typedConfig:
                    "@type": >-
                      type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    httpFilters:
                      - name: envoy.filters.http.compressor
                        typed_config:
                          "@type": >-
                            type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                          compressor_library:
                            name: text_optimized
                            typed_config:
                              "@type": >-
                                type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          remove_accept_encoding_header: true
                      - name: envoy.filters.http.router
                        typedConfig:
                          "@type": >-
                            type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    routeConfig:
                      virtualHosts:
                        - domains:
                            - "*"
                          name: backend
                          routes:
                            - match:
                                prefix: /stats/prometheus
                              route:
                                cluster: prometheus_stats
                    statPrefix: stats
